Chat section mobile view fixes

--- a/frontend/web/less/mobile/chat_post.less
+++ b/frontend/web/less/mobile/chat_post.less
@@ -338,6 +338,7 @@
         top: 40%;
         right: 0;
         width: auto;
+        max-height: 135px;
         .box-navigation {
             .btn-group {
                 margin-left: 0;
